<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".non_covid">

    <TextView
        android:id="@+id/textView2"
        android:layout_width="124dp"
        android:layout_height="48dp"
        android:gravity="center"
        android:text="@string/nc"
        android:textColor="#000000"
        android:textSize="24sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.55"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.105" />

    <Button
        android:id="@+id/sts"
        android:layout_width="138dp"
        android:layout_height="63dp"
        android:layout_marginTop="84dp"
        android:text="@string/stat"
        android:textColor="#000000"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.527"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView2" />

    <Button
        android:id="@+id/hpcount"
        android:layout_width="208dp"
        android:layout_height="67dp"
        android:layout_marginTop="60dp"
        android:text="@string/hs"
        android:textColor="#000000"

        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/sts" />

    <Button
        android:id="@+id/vcc"
        android:layout_width="233dp"
        android:layout_height="83dp"
        android:layout_marginTop="56dp"
        android:text="@string/vc"
        android:textColor="#131313"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.573"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/hpcount" />

    <Button
        android:id="@+id/oxy"
        android:layout_width="222dp"
        android:layout_height="78dp"
        android:text="@string/oxy"
        android:textColor="#000000"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.539"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/vcc"
        app:layout_constraintVertical_bias="0.49" />
</androidx.constraintlayout.widget.ConstraintLayout>