<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Welcome">

    <Button
        android:id="@+id/login"
        android:layout_width="140dp"
        android:layout_height="60dp"
        android:foregroundGravity="center"
        android:gravity="center"
        android:text="@string/log"
        android:textColor="#000000"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.162"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.751" />

    <Button
        android:id="@+id/signup"
        android:layout_width="140dp"
        android:layout_height="60dp"
        android:foregroundGravity="center"
        android:gravity="center"
        android:text="@string/sign"
        android:textColor="#000000"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.574"
        app:layout_constraintStart_toEndOf="@+id/login"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.751" />

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="153dp"
        android:layout_height="147dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.203"
        app:srcCompat="@drawable/icon2" />

    <TextView
        android:id="@+id/textView5"
        android:layout_width="159dp"
        android:layout_height="46dp"
        android:fontFamily="sans-serif-black"
        android:text="@string/app_name"
        android:textColor="#000000"
        android:textSize="34sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.511"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.435" />
</androidx.constraintlayout.widget.ConstraintLayout>