<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Register">

    <TextView
        android:id="@+id/textView6"
        android:layout_width="205dp"
        android:layout_height="69dp"
        android:fontFamily="@font/muli_black"
        android:text="@string/rg"
        android:textColor="#000000"
        android:textSize="48sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.165"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.148" />

    <ImageButton
        android:id="@+id/backreg"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:background="#FFFFFF"
        android:scaleType="fitStart"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.044"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.023"
        app:srcCompat="@drawable/back" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/textInputFullName"
        android:layout_width="352dp"
        android:layout_height="51dp"
        app:boxStrokeWidthFocused="2dp"
        app:endIconMode="clear_text"
        app:endIconTint="@color/black"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.576"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.314"
        app:startIconDrawable="@drawable/user3"
        app:startIconTint="@color/black">

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="353dp"
            android:layout_height="52dp"
            android:filterTouchesWhenObscured="false"
            android:fitsSystemWindows="false"
            android:focusableInTouchMode="false"
            android:hint="@string/full" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/textInputPassword"
        android:layout_width="352dp"
        android:layout_height="51dp"
        app:boxStrokeWidthFocused="2dp"
        app:endIconMode="password_toggle"
        app:endIconTint="@color/black"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.576"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.497"
        app:startIconDrawable="@drawable/pass4"
        app:startIconTint="@color/black">


        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="353dp"
            android:layout_height="52dp"
            android:filterTouchesWhenObscured="false"
            android:fitsSystemWindows="false"
            android:focusableInTouchMode="false"
            android:hint="@string/pass"
            android:inputType="textPassword" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/textInputEmail"
        android:layout_width="352dp"
        android:layout_height="51dp"
        app:boxStrokeWidthFocused="2dp"
        app:endIconMode="clear_text"
        app:endIconTint="@color/black"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.576"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.404"
        app:startIconDrawable="@drawable/email5"
        app:startIconTint="@color/black">

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="353dp"
            android:layout_height="52dp"
            android:filterTouchesWhenObscured="false"
            android:fitsSystemWindows="false"
            android:focusableInTouchMode="false"
            android:hint="@string/user" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/textInputPhoneNo"
        android:layout_width="352dp"
        android:layout_height="51dp"
        app:boxStrokeWidthFocused="2dp"
        app:endIconMode="clear_text"
        app:endIconTint="@color/black"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.593"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.589"
        app:startIconDrawable="@drawable/phone"
        app:startIconTint="@color/black">

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="353dp"
            android:layout_height="52dp"
            android:filterTouchesWhenObscured="false"
            android:fitsSystemWindows="false"
            android:focusableInTouchMode="false"
            android:hint="@string/ph" />
    </com.google.android.material.textfield.TextInputLayout>

    <Button
        android:id="@+id/reg"
        android:layout_width="350dp"
        android:layout_height="51dp"
        android:background="#000000"
        android:text="@string/rg"
        android:textSize="16sp"
        app:backgroundTint="#000000"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.59"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.711" />

    <Button
        android:id="@+id/login"
        android:layout_width="215dp"
        android:layout_height="34dp"
        android:shadowColor="#FFFFFF"
        android:text="@string/al"
        android:textColor="#3A3939"
        android:textSize="10sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/reg"
        app:layout_constraintVertical_bias="0.061" />

</androidx.constraintlayout.widget.ConstraintLayout>