<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".login">

    <ImageButton
        android:id="@+id/backlog"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:adjustViewBounds="false"
        android:background="#FFFFFF"
        android:foregroundGravity="center_vertical"
        android:scaleType="fitStart"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.044"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.023"
        app:srcCompat="@drawable/back" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="198dp"
        android:layout_height="74dp"
        android:fontFamily="@font/muli_black"
        android:text="@string/log"
        android:textColor="#000000"
        android:textSize="48sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.159"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.147" />

    <EditText
        android:id="@+id/emaillog"
        android:layout_width="360dp"
        android:layout_height="65dp"
        android:ems="10"
        android:hint="Email"
        android:inputType="textEmailAddress"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.568"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.31" />

    <EditText
        android:id="@+id/passlog"
        android:layout_width="360dp"
        android:layout_height="65dp"
        android:ems="10"
        android:hint="@string/password"
        android:inputType="textPassword"
        app:endIconMode="password_toggle"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.705"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.436"
        app:startIconDrawable="@drawable/pass4"
        app:startIconTint="@color/black" />

    <CheckBox
        android:id="@+id/checkBox"
        android:layout_width="153dp"
        android:layout_height="40dp"
        android:text="@string/rem"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/button7"
        app:layout_constraintHorizontal_bias="0.55"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.558" />

    <Button
        android:id="@+id/button7"
        android:layout_width="173dp"
        android:layout_height="40dp"
        android:background="#000000"
        android:shadowColor="@color/cardview_shadow_end_color"
        android:text="@string/fp"
        android:textColor="#000000"
        android:textSize="12sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.907"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.558" />

    <Button
        android:id="@+id/login2"
        android:layout_width="356dp"
        android:layout_height="55dp"
        android:gravity="center"
        android:text="@string/log"
        android:textColor="#FFFFFF"
        app:backgroundTint="#000000"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.6"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.65" />


</androidx.constraintlayout.widget.ConstraintLayout>